src/objects/MICO_Environment__c.object
<CustomObject>
    <description>Business Description: This object is used to track the environments in the project landscape. This may include several SFDC environments as well as other systems. Environments can be linked to releases to help track what releases have been put in to what environments.

Used In: Mission Control App</description>
    <fields>
        <fullName>Days_since_last_refresh__c</fullName>
        <formula>TODAY()- Last_Refresh__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since last refresh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Purpose of the environment and the users involved</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Refresh__c</fullName>
        <inlineHelpText>The date this environment was last refreshed</inlineHelpText>
        <label>Last Refresh</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Org_ID__c</fullName>
        <inlineHelpText>The SFDC Org ID or other technology specific technical reference number</inlineHelpText>
        <label>Org ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <picklist>
            <picklistValues>
                <fullName>SFDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <label>Track</label>
        <picklist>
            <picklistValues>
                <fullName>Sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training/Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Track</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <controllingField>Technology__c</controllingField>
            <picklistValues>
                <fullName>Dev (10MB)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Config (500MB)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full (80GB)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Environment</label>
    <listViews>
        <fullName>SFDC</fullName>
        <columns>NAME</columns>
        <columns>Technology__c</columns>
        <columns>Description__c</columns>
        <columns>Track__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Days_since_last_refresh__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Technology__c</field>
            <operation>equals</operation>
            <value>SFDC</value>
        </filters>
        <label>1) SFDC Environments</label>
    </listViews>
    <listViews>
        <fullName>nonSFDC</fullName>
        <columns>NAME</columns>
        <columns>Technology__c</columns>
        <columns>Description__c</columns>
        <columns>Track__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Days_since_last_refresh__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Technology__c</field>
            <operation>notEqual</operation>
            <value>SFDC</value>
        </filters>
        <label>2) Non SFDC Environments</label>
    </listViews>
    <nameField>
        <label>Environment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>